Update 2.06 Determine data security controls and compliance requirements.md

--- a/DOMAIN2: Asset Security/2.06 Determine data security controls and compliance requirements.md
+++ b/DOMAIN2: Asset Security/2.06 Determine data security controls and compliance requirements.md
@@ -231,8 +231,8 @@ flowchart TB
   B --> B1[Focused on DoD systems; aligns controls with DoD mission]
   B --> B2[Based on NIST SP 800‑37 + DoDI 8510.01] 
 
-  A --> C[NIST RMF (SP 800‑37)]
-  C --> C1[6‑step (now 7‑step) lifecycle for federal systems]
+  A --> C[NIST RMF - SP 800‑37]
+  C --> C1[6‑step - now 7‑step lifecycle for federal systems]
   C --> C2[Used across public & private sectors under FISMA]:contentReference[oaicite:1]{index=1}
 
   A --> D[NIST CSF]
