--- a/DOMAIN1: Security and Risk Management/1.Q.1 Easy Questions.md
+++ b/DOMAIN1: Security and Risk Management/1.Q.1 Easy Questions.md
@@ -1,13 +1,17 @@
 ## Easy Questions ##
 
 1. What is the fourth canon of the ISC² Code of Ethics?
-<details>
-  <summary>
+   
 (A) Advance and protect the profession
+
 (B) Protect society, the common good, necessary public trust and confidence, and the infrastructure
+
 (C) Protect personal data
+
 (D) Develop policies to protect information and asset security
-  </summary>
+
+<details>
+  <summary>Show answer</summary>
 Correct Answer: (A)
 
 The fourth canon of the ISC² Code of Ethics compels certified professionals to champion the information security field by promoting best practices, mentoring others, refraining from actions that could harm its reputation, and maintaining their own competence. This commitment ensures the integrity and trustworthiness of the profession overall.
