Update 1.Q.1 Easy Questions.md

--- a/DOMAIN1: Security and Risk Management/1.Q.1 Easy Questions.md
+++ b/DOMAIN1: Security and Risk Management/1.Q.1 Easy Questions.md
@@ -11,8 +11,9 @@
 (D) Develop policies to protect information and asset security
 
 <details>
-  <summary>Show answer</summary>
-Correct Answer: (A)
+  <summary>*Show answer*</summary>
+
+   Correct Answer: (A)
 
 The fourth canon of the ISC² Code of Ethics compels certified professionals to champion the information security field by promoting best practices, mentoring others, refraining from actions that could harm its reputation, and maintaining their own competence. This commitment ensures the integrity and trustworthiness of the profession overall.
 
