--- a/DOMAIN1: Security and Risk Management/1.Q.1 Easy Questions.md
+++ b/DOMAIN1: Security and Risk Management/1.Q.1 Easy Questions.md
@@ -1,6 +1,6 @@
 ## Easy Questions ##
 
-1. What is the fourth canon of the ISC² Code of Ethics?
+1. **What is the fourth canon of the ISC² Code of Ethics?**
    
 (A) Advance and protect the profession
 
@@ -13,9 +13,34 @@
 <details>
   <summary>Show answer</summary>
 
-   Correct Answer: (A)
+   **Correct Answer: (A)**
 
 The fourth canon of the ISC² Code of Ethics compels certified professionals to champion the information security field by promoting best practices, mentoring others, refraining from actions that could harm its reputation, and maintaining their own competence. This commitment ensures the integrity and trustworthiness of the profession overall.
 
 Find out more [here]([1.1.1 ISC2 Code of Professional Ethics](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.01%20Understand%2C%20adhere%20to%2C%20and%20promote%20professional%20ethics.md#111-isc2-code-of-professional-ethics))
 </details>
+
+---
+
+2. **What is the first step ISC² takes when processing a complaint?**
+   
+(A) Deliver sanctions
+
+(B) Notify all parties involved
+
+(C) Initial review
+
+(D) Inform the board
+
+<details>
+  <summary>Show answer</summary>
+
+   **Correct Answer: (C)**
+
+When ISC² receives a complaint lodged against a member, the first action is the Initial review. During this phase, the Professional Conduct (Ethics) Committee assesses whether the complaint meets the basic submission criteria—such as being in writing, specifying which Ethical Canon is involved, and providing sufficient evidence. This review determines whether the complaint can move forward into a full investigation or should be dismissed at the outset. This preliminary scrutiny ensures that only well-founded and documented allegations are pursued further
+
+Find out more [here]([1.1.1 ISC2 Code of Professional Ethics](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.01%20Understand%2C%20adhere%20to%2C%20and%20promote%20professional%20ethics.md#111-isc2-code-of-professional-ethics))
+</details>
+
+---
+
