Update 1.Q.1 Easy Questions.md

--- a/DOMAIN1: Security and Risk Management/1.Q.1 Easy Questions.md
+++ b/DOMAIN1: Security and Risk Management/1.Q.1 Easy Questions.md
@@ -44,3 +44,24 @@ Find out more here: ([1.1.1 ISC2 Code of Professional Ethics](https://github.com
 
 ---
 
+3. **What is the primary purpose of the Computer Ethics Institute’s Ten Commandments of Computer Ethics?**
+   
+(A) Advance and protect the profession
+
+(B) Serve as guidelines for ethical computer use
+
+(C) Serve as guidelines for ethical computer use
+
+(D) Act honorably, honestly, justly, responsibly, and legally
+
+<details>
+  <summary>Show answer</summary>
+
+   **Correct Answer: (C)**
+
+The Ten Commandments of Computer Ethics, created by the Computer Ethics Institute in 1992, are a succinct set of principles designed to guide individuals toward responsible, respectful, and moral use of technology. They outline what users shouldn’t do—like harming others, stealing, spying, or violating privacy—to promote ethical conduct in the digital realm.
+
+Options B, C, and D reflect broader professional or ethical goals, but only option A correctly captures the primary purpose of the Ten Commandments as a clear behavioral guide for ethical computing.
+
+Find out more here: ([1.1.1 ISC2 Code of Professional Ethics](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.01%20Understand%2C%20adhere%20to%2C%20and%20promote%20professional%20ethics.md#111-isc2-code-of-professional-ethics))
+</details>
